# CurrencyBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
bot/: bot.py
bot/database/: connect.py  db.py  models.py
bot/handlers/: commands.py  handlers.py
bot/settings/: settings.py
bot/utils/: menu.py  my_logger.py  parser.py  query_to_db.py  serializers.py
migrations/: env.py
migrations/versions/: 61e242ebafb4_.py  6811ef8d4cc1_.py  6f071df6c639_.py  bf8d83d852f9_.py  eadbae1ad812_.py  f04817711932_initial.py
