[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["IlyaBulatau <ilyabulatau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0rc2"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
aiohttp = "^3.8.5"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
