[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["IlyaBulatau <ilyabulatau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0rc2"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
celery = "^5.3.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
